2009-03-06 Stephen Sinclair <radarsat1@gmail.com>
	* Add a return value to lo_bundle_add_message().
	* Avoid pointer arithmetic on void* types for compilers that can't handle it.
	* Move all local variable declarations to the top of the scope.

2009-02-17 Stephen Sinclair <radarsat1@gmail.com>
	* For multicast, enable SO_REUSEPORT as well as SO_REUSEADDR. (Mike Wozniewski)

2009-02-12 Stephen Sinclair <radarsat1@gmail.com>
	* Fix the definition of LO_TT_IMMEDIATE per the OSC spec. (Dominic Sacré)

2009-02-01 Stephen Sinclair <radarsat1@gmail.com>
	* Add function lo_message_get_timestamp(). (Alex McLean)
	* Fix magic constant in lo_timetag_diff. (Dominic Sacré)
	* Bump the LO_SO_VERSION version major number to resolve ABI
	  incompatibilities with previous versions.  In particular, the
	  addition of 'const' to an argument of lo_blob_new() in r80
	  constituted an API add and removal, hence the reset of the 3rd
	  number ('age') according to the libtool manual. (SS)

2009-01-04 Stephen Sinclair <radarsat1@gmail.com>
	* Add checks to configure.ac for select() and poll().
	* Use inet_addr if inet_aton is not available. (i.e., on Windows)
	* Retry a TCP connection once if it failed to connect on send.
	* Remove useless conditional call to freeaddrinfo().
	* Only implement gai_strerrorA if gai_strerror was not already defined.
	* Make the TCP protocol retain session information for multiple connections.

2008-12-23  Nicholas Humfrey  <njh@aelius.com>
	* Added a function called lo_server_wait() which waits for a message to be received.

2008-11-23  Stephen Sinclair <radarsat1@gmail.com>
	* Use the \internal Doxygen command to hide internal functions.

2008-10-11  Kentaro Fukuchi <fukuchi@megaui.net>
	* lo_url_get_protocol_id() has been added.
	* lo_address_new_with_proto() has been added.
	* Changed lo_address_new_from_url() to use lo_url_get_protocol_id().

2008-10-09  Kentaro Fukuchi <fukuchi@megaui.net>
	* src/tools/oscsend.c: Fixed compile-time error on OS X.