@@ -2,6 +2,7 @@
 	* Add a return value to lo_bundle_add_message().
 	* Avoid pointer arithmetic on void* types for compilers that can't handle it.
 	* Move all local variable declarations to the top of the scope.
+	* Conditionally avoid the use of variable-argument macros if not GCC.
 
 2009-02-17 Stephen Sinclair <radarsat1@gmail.com>
 	* For multicast, enable SO_REUSEPORT as well as SO_REUSEADDR. (Mike Wozniewski)
